--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -25,13 +25,13 @@ layout: default
           <ul class="list-group list-group-flush">
             {% if page.team-email %}
               <li class="list-group-item">
-		      <small style="text-align: center;">JOIN THE TEAM<br />CLICK HERE</small>
+		      <small style="text-align: center;">JOIN THE TEAM<br />CLICK BELOW</small>
               <br>
               <a href="mailto:{{ email-subscribe }}">{{ page.team-email }}+subscribe
                   <br><small>{{ email-domain }}</small></a>
               </li>
               <li class="list-group-item">
-		      <small style="text-align: center;">CONTACT THE TEAM LEADERS<br />CLICK HERE</small>
+		      <small style="text-align: center;">CONTACT THE TEAM LEADERS<br />CLICK BELOW</small>
               <br>
               <a href="mailto:{{ email-owner }}">{{ page.team-email }}+owner
                   <br><small>{{ email-domain }}</small></a>
