--- a/_includes/event-post-header.html
+++ b/_includes/event-post-header.html
@@ -7,7 +7,7 @@
         <div class="col-2 col-sm-3 col-lg-2">
           <center>
 		  {% if post.tags contains 'partner' %}
-		    <span class="badge badge-partner">Partner Event</span>
+		  <span class="badge badge-partner">Partner<br />Event</span>
 		  {% else %}
 		    <span class="badge badge-primary">Event</span>
 		  {% endif %}
