--- a/_includes/icon-facebook.html
+++ b/_includes/icon-facebook.html
@@ -1,1 +1,1 @@
-<a href="https://facebook.com/{{ include.username }}" class="nav-link"><span class="icon icon--facebook">{% include icon-facebook.svg %}</span></a>
+<a href="https://facebook.com/{{ include.username }}" class="nav-link" target="_blank"><span class="icon icon--facebook">{% include icon-facebook.svg %}</span></a>
