--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,1 +1,1 @@
-<a href="https://twitter.com/{{ include.username }}" class="nav-link"><span class="icon icon--twitter">{% include icon-twitter.svg %}</span></a>
+<a href="https://twitter.com/{{ include.username }}" class="nav-link" target="_blank"><span class="icon icon--twitter">{% include icon-twitter.svg %}</span></a>
