--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,6 +37,12 @@
 
   <div class="spacer clearfix"></div>
 
+  {% if site.facebook_feed %}
+    <div class="justify-content-right container-fluid">
+      {{ site.facebook_feed %}
+    </div>
+  {% endif %}
+
 </nav>
 
 {% if site.representatives | size > 0 %}
