--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -11,7 +11,7 @@
           <h3 class="mt-2 mb-2">
 		  <a class="post-link" href="{% if post.news-link %}{{ post.news-link}}{% else %}{{ post.url | relative_url }}{% endif %}" {% if post.news-link %}target="_blank"{% endif %}>{{ post.title | escape }}</a>
           </h3>
-	  <div class="text-muted post-body mb-2">{% if post.news-link %} {% else %}{{ post.content | strip_html | truncate: 140 }}{% endif %}</div>
+	  <div class="text-muted post-body mb-2">{{ post.content | strip_html | truncate: 140 }}</div>
         </div>
         <!-- POST MAIN IMAGE FIELD -->
         {% if post.main-image %}
