--- a/_includes/sort-by-date.html
+++ b/_includes/sort-by-date.html
@@ -27,7 +27,7 @@ The return variable is S_posts, the array of sorted posts.
 {% assign S_event_index = 0 %}
 {% assign S_action_index = 0 %}
 
-{% assign emptyArray = "|split: " %}
+{% assign emptyArray = '' | split: '' %}
 
 {% assign S_posts = emptyArray %}
 
